--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="red">#D62636</color>
-    <color name="blueSky">#3498A0</color>
-    <color name="darkG">#262626</color>
+    <color name="blueSky">#4B5252</color>
+    <color name="darkG">#3A3A3A</color>
     <color name="dotColor">#181D83</color>
 
 
