--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -121,21 +121,22 @@
 
     <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
         android:id="@+id/TLdots"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignStart="@+id/functions_"
         android:layout_alignTop="@+id/etNumber"
         android:layout_alignEnd="@+id/functions_"
         android:layout_alignBottom="@+id/keyboard"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
         app:trailingcircular_animDelay="200"
         app:trailingcircular_animDuration="1200"
         app:trailingcircular_bigCircleRadius="0dp"
         app:trailingcircular_dotsColor="@color/loader_selected"
         app:trailingcircular_dotsRadius="0dp"
-        app:trailingcircular_noOfTrailingDots="5" />
+        app:trailingcircular_noOfTrailingDots="5"
+        />
 
 </RelativeLayout>
