--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -89,6 +89,17 @@
         android:layout_marginEnd="7dp"
         android:background="@drawable/grad_screen_w2" />
 
+    <View
+        android:id="@+id/Vbackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:background="#80000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <it.ticandtac.primecalculator.MyViews.MyKeyboard
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
@@ -127,16 +138,15 @@
         android:layout_alignTop="@+id/etNumber"
         android:layout_alignEnd="@+id/functions_"
         android:layout_alignBottom="@+id/keyboard"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="350dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="250dp"
         app:trailingcircular_animDelay="200"
         app:trailingcircular_animDuration="1200"
         app:trailingcircular_bigCircleRadius="0dp"
         app:trailingcircular_dotsColor="@color/loader_selected"
         app:trailingcircular_dotsRadius="0dp"
-        app:trailingcircular_noOfTrailingDots="5"
-        />
+        app:trailingcircular_noOfTrailingDots="5" />
 
 </RelativeLayout>
