--- a/app/src/main/res/layout/app_info.xml
+++ b/app/src/main/res/layout/app_info.xml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFF">
+    android:layout_width="wrap_content" android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dialogDescription"
-        android:text="@string/dontShowMeAgain"
-        android:layout_alignParentEnd="true"
-        android:textColor="@color/darkG"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="10dp"
-        android:buttonTint="@color/red"
-        android:checked="false"
-
-        />
     <TextView
-        android:id="@+id/dialogTitle"
+        android:id="@+id/infoTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="@string/warningsTitle"
+        android:background="@drawable/border"
+        android:layout_margin="10dp"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/red"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
+        android:text="@string/Information"
         android:textSize="25dp"
-        android:background="@drawable/border"/>
+        android:textColor="@color/red"/>
     <TextView
-        android:id="@+id/dialogDescription"
-        android:layout_below="@+id/dialogTitle"
-        android:layout_width="match_parent"
+        android:id="@+id/T1"
+        android:layout_below="@+id/infoTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/warnings"
-        android:textColor="@color/darkG"
-        android:textSize="15dp"
-        android:padding="10dp"/>
+        android:layout_margin="10dp"
+        android:text="@string/ticandtac_group"
+        android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/T2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/AP"
+        android:layout_below="@+id/T1"
+        android:layout_margin="10dp"
+        android:textSize="15dp"/>
+    <TextView
+        android:id="@+id/T3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/T2"
+        android:layout_margin="10dp"
+        android:text="@string/AM"
+        android:textSize="15dp"/>
+
 
 </RelativeLayout>
