quasi fine versione

--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -37,7 +37,7 @@
         android:layout_marginEnd="0dp"
         android:layout_toStartOf="@id/view4"
         android:layout_toEndOf="@id/view5"
-        android:background="@color/blueSky"
+        android:background="#3498A0"
         android:cursorVisible="false"
         android:textAlignment="textEnd"
         android:textColor="@color/darkG"
@@ -50,7 +50,7 @@
         android:layout_height="50dp"
         android:layout_below="@+id/etNumber"
         android:layout_toStartOf="@id/view4"
-        android:background="@color/blueSky"
+        android:background="#3498A0"
         android:textAlignment="textEnd"
         android:layout_toEndOf="@id/view5"
         android:textColor="@color/darkG"
