--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,16 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation"/>
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:menu="@menu/bottom_navigation"
-            android:background="#262626"
-            app:itemIconTint="#D62636"
-            app:itemTextColor="#D62636"
-            />
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#262626"
+        android:clickable="false"
+        app:itemIconTint="#D62636"
+        app:itemTextColor="#D62636"
+        app:menu="@menu/bottom_navigation" />
 
 
 </RelativeLayout>
